--- a/index.html
+++ b/index.html
@@ -111,6 +111,16 @@
     errBtn.addEventListener('click', function(){
       console.error('Console Error Demo');
     });
+    
+    let countBtn = document.getElementById('count');
+    countBtn.addEventListener('click', function(){
+      console.click('Console Count Demo');
+    });
+    
+    let warnBtn = document.getElementById('warn');
+    warnBtn.addEventListener('click', function(){
+      console.warn('Console Warn Demo');
+    });
   </script>
 </body>
 
