--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     });
     
     let assertBtn = document.getElementById('assert');
-    aseertBtn.addEventListener('click', function(){
+    assertBtn.addEventListener('click', function(){
       let expression = 1+1;
       let result = 3;
       let reason = '1+1 does not equal to 3';
