--- a/index.html
+++ b/index.html
@@ -172,10 +172,10 @@
     
     let traceBtn = document.getElementById('trace');
     traceBtn.addEventListener('click', function(){
-      const Thank_you =  function{Im_fine();};
-      const Im_fine =  function{How_are_you();};
-      const How_are_you =  function{Hi();};
-      const Hi = function{console.trace();};
+      const Thank_you =  function(){Im_fine();};
+      const Im_fine =  function(){How_are_you();};
+      const How_are_you =  function(){Hi();};
+      const Hi = function(){console.trace();};
     });
   </script>
 </body>
