--- a/index.html
+++ b/index.html
@@ -172,10 +172,11 @@
     
     let traceBtn = document.getElementById('trace');
     traceBtn.addEventListener('click', function(){
-      const Thank_you =  function(){Im_fine();};
-      const Im_fine =  function(){How_are_you();};
-      const How_are_you =  function(){Hi();};
-      const Hi = function(){console.trace();};
+      let Thank_you =  function(){Im_fine();};
+      let Im_fine =  function(){How_are_you();};
+      let How_are_you =  function(){Hi();};
+      let Hi = function(){console.trace();};
+      Thank_you();
     });
   </script>
 </body>
