--- a/index.html
+++ b/index.html
@@ -182,7 +182,8 @@
     let globalBtn = document.getElementById('global');
     globalBtn.addEventListener('click', function(){
       try {
-        console.log('I made an error')
+        let plus = 1+1
+        console.log('I made an error');
       } catch (err) {
         error(`Oh my goodness it's an error!!!`);
       }
