--- a/index.html
+++ b/index.html
@@ -195,9 +195,8 @@
         let inputOne = document.getElementById('first-num').value;
         let inputTwo = document.getElementById('second-num').value;
         let operation = document.getElementById('operator').value;
-        console.log(inputOne);
-        console.log(inputTwo);
-        if (inputOne === null || inputTwo === null) {
+
+        if (inputOne === '' || inputTwo === '') {
           throw new Error("Inputs need to be filled");
         }
         
