--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         
         let result;
         if (operation === 'add') {
-          result = inputOne + inputTwo;
+          result = numOne + numTwo;
         }
         else if (operation === 'subtract') {
           result = numOne - numTwo;
