--- a/index.html
+++ b/index.html
@@ -179,15 +179,29 @@
       Thank_you();
     });
     
-    /*let globalBtn = document.getElementById('global');
+    let globalBtn = document.getElementById('global');
     globalBtn.addEventListener('click', function(){
-      try {
-        let plus = 1+1
-        console.log('I made an error');
-      } catch (err) {
-        error(`Oh my goodness it's an error!!!`);
-      }
-    });*/
+      abooM();
+    });
+    window.onerror = function(msg, url, line, col, error) {
+      console.log('Global error');
+      /*
+       // Note that col & error are new to the HTML 5 spec and may not be 
+       // supported in every browser.  It worked for me in Chrome.
+       var extra = !col ? '' : '\ncolumn: ' + col;
+       extra += !error ? '' : '\nerror: ' + error;
+
+       // You can view the information in an alert to see things working like this:
+       alert("Error: " + msg + "\nurl: " + url + "\nline: " + line + extra);
+
+       // TODO: Report this error via ajax so you can keep track
+       //       of what pages have JS issues
+
+       var suppressErrorAlert = true;
+       // If you return true, then error alerts (like in older versions of 
+       // Internet Explorer) will be suppressed.
+       return suppressErrorAlert;*/
+    };
     
     class MathError extends Error {
       constructor(message) {
