--- a/index.html
+++ b/index.html
@@ -183,9 +183,6 @@
     globalBtn.addEventListener('click', function(){
       boomshakalaka();
     });
-    window.onerror = function(msg, url, line, col, error) {
-      console.log('Global error');
-    };
     
     class MathError extends Error {
       constructor(message) {
@@ -208,7 +205,7 @@
         let numOne = Number(inputOne);
         let numTwo = Number(inputTwo);
         if (isNaN(numOne) || isNaN(numTwo)) {
-          throw new Error("Inputs need to be valid");
+          throw new MathError("Inputs need to be valid");
         }
         if (operation === 'divide' && numTwo === 0) {
           throw new MathError("Cannot divide by 0!");
@@ -239,6 +236,10 @@
       } finally {
         console.log('Boom. A result or an error');
       }
+      
+      window.onerror = function(msg, url, line, col, error) {
+        console.log('Global error');
+      };
     });
   </script>
 </body>
