--- a/index.html
+++ b/index.html
@@ -205,10 +205,12 @@
         let numOne = Number(inputOne);
         let numTwo = Number(inputTwo);
         if (isNaN(numOne) || isNaN(numTwo)) {
-          throw new MathError("Inputs need to be valid");
+          //throw new MathError("Inputs need to be valid");
+          throw new Error("Inputs need to be valid");
         }
         if (operation === 'divide' && numTwo === 0) {
-          throw new MathError("Cannot divide by 0!");
+          //throw new MathError("Cannot divide by 0!");
+          throw new Error("Cannot divide by 0!");
         }
         
         let result;
@@ -237,8 +239,8 @@
         console.log('Boom. A result or an error');
       }
       
-      window.onerror = function(msg, url, line, col, error) {
-        console.log('Global error');
+      window.onerror = function() {
+        console.log('Global error demo');
       };
     });
   </script>
