--- a/index.html
+++ b/index.html
@@ -182,11 +182,7 @@
     let globalBtn = document.getElementById('global');
     globalBtn.addEventListener('click', function(){
       boomshakalaka();
-      if (window.onerror) {
-        window.onerror = function(msg, url, line, col, error) {
-          console.log(`Global error demo`);
-        };
-      }
+      window.onerror = true;
     });
     
     class MathError extends Error {
