--- a/index.html
+++ b/index.html
@@ -87,6 +87,14 @@
     </section>
   </main>
 
+  <script src="https://cdn.trackjs.com/agent/v3/latest/t.js"></script>
+  <script>
+    window.TrackJS && TrackJS.install({ 
+      token: "053530ac4e104f8eab7844324a989864"
+      // for more configuration options, see https://docs.trackjs.com
+    });
+  </script>
+                        
   <script>
     let form = document.querySelector('form');
     form.addEventListener('submit', e => {
@@ -241,6 +249,7 @@
       }
     });
     window.addEventListener("error", () => {
+      TrackJS.track('Testing TrackJS!');
       console.log("Global error demo");
     });
   </script>
